# julesctl

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  JULES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml  jules-pr-review.yml
cli-chat-rs/: ADAPTER_GUIDE.md  Cargo.toml  INTEGRATION.md  LICENSE  PROJECT_SUMMARY.md  README.md
cli-chat-rs/examples/: custom_adapter.rs  demo_adapter.rs  demo_standalone.rs
cli-chat-rs/src/: demo_adapter.rs  lib.rs  main.rs
cli-chat-rs/src/adapter/: demo.rs  mod.rs  traits.rs
cli-chat-rs/src/config/: mod.rs
cli-chat-rs/src/types/: mod.rs
cli-chat-rs/src/ui/: keyboard.rs  mod.rs  tui.rs
docs/: DERLEME_SURECI_VE_BAGIMLILIKLAR.md  ROADMAP.md
docs/architecture/: core-philosophy.md  data-management-ahenk.md  hybrid-git-engine.md  local-orchestration.md
docs/conflict-resolution/: framework.md
docs/git-workflow/: branching-and-sync.md  visual-patch-stack.md
docs/ui/: layout-and-navigation.md  scoped-chat-integration.md  settings-ui.md
scripts/: README.md  build_android_termux.sh  build_linux_arm64.sh  build_linux_x86_64.sh  build_macos_arm64.sh  build_macos_x86_64.sh  build_win_arm64.bat  build_win_x86_64.bat
src/: display.rs  main.rs  tui_dashboard.rs  tui_home.rs
src/adapter/: cli_chat_rs.rs  mod.rs
src/api/: activities.rs  ahenk.rs  artifacts.rs  mod.rs  sessions.rs
src/config/: mod.rs  rules.rs  schema.rs
src/git/: branch.rs  graph.rs  mod.rs  pull.rs
src/modes/: manual.rs  mod.rs  single.rs
src/orchestrator/: manager.rs  mod.rs  prompts.rs  task_file.rs
src/patch/: apply.rs  conflict.rs  fetch.rs  mod.rs  queue.rs
