[package]
name = "julesctl"
version = "0.1.0"
edition = "2021"
description = "Jules AI multi-session orchestrator CLI"
license = "MIT"
authors = ["rvoidex7"]

[[bin]]
name = "julesctl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
async-trait = "0.1"
dirs = "5"
notify = "6"
tempfile = "3"
cli-chat-rs = { version = "0.1.0", path = "../cli-chat-rs" }
chrono = { version = "0.4", features = ["serde"] }
